langをjaに変更、SNSシェア用のmetaタグ(OGP)を追加

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,20 @@
 
     <!-- for fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    
+    <!-- SNSシェア用のmetaタグ OGP(Open Graph Protocol) start-->
+    <meta property="og:title" content="TripWeather">
+    <meta property="og:image" content="https://trip-weather-frontend.herokuapp.com/favicon.ico">
+    <meta property="og:description" content="旅行先のこの先一週間の天気予報を現在地と比較して見ることができます。旅行の服装・持ち物の準備にどうぞ。">
+    <meta property="og:url" content="https://trip-weather-frontend.herokuapp.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="TripWeather">
+    <meta name="twitter:site" content="https://trip-weather-frontend.herokuapp.com/">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="TripWeather">
+    <meta name="twitter:image" content="https://trip-weather-frontend.herokuapp.com/favicon.ico">
+    <meta name="twitter:description" content="旅行先のこの先一週間の天気予報を現在地と比較して見ることができます。旅行の服装・持ち物の準備にどうぞ。">
+    <!-- SNSシェア用のmetaタグ OGP(Open Graph Protocol) end-->
   </head>
   <body>
     <noscript>
